--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -1,46 +1,4 @@
-name: Build and Release
-
-on:
-  push:
-    branches:
-      - main
-    tags:
-      - 'v*'
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Set up Go
-      uses: actions/setup-go@v5
-      with:
-        go-version: '1.21'
-
-    - name: Build for Linux AMD64
-      run: |
-        GOOS=linux GOARCH=amd64 go build -o mdok-linux-amd64 .
-        chmod +x mdok-linux-amd64
-
-    - name: Build for Linux ARM64
-      run: |
-        GOOS=linux GOARCH=arm64 go build -o mdok-linux-arm64 .
-        chmod +x mdok-linux-arm64
-
-    - name: Create version info
-      run: |
-        echo "Built from commit: ${{ github.sha }}" > VERSION.txt
-        echo "Date: $(date -u +%Y-%m-%d\ %H:%M:%S\ UTC)" >> VERSION.txt
-        if [[ "${{ github.ref }}" == refs/tags/* ]]; then
-          echo "Version: ${GITHUB_REF#refs/tags/}" >> VERSION.txt
-        else
-          echo "Branch: ${GITHUB_REF#refs/heads/}" >> VERSION.txt
-        fi
-
-    - name: Push binaries to release branch
+- name: Push binaries to release branch
       run: |
         git config --global user.name 'GitHub Actions'
         git config --global user.email 'actions@github.com'
@@ -64,36 +22,40 @@ jobs:
         cp ../VERSION.txt .
 
         # Create README for release branch
+        # Note: All lines below must be indented relative to "run"
         cat > README.md << EOF
-# mdok Binaries
+        # mdok Binaries
 
-Pre-built binaries for mdok - Docker container monitoring tool.
+        Pre-built binaries for mdok - Docker container monitoring tool.
 
-## Quick Install
+        ## Quick Install
 
-### Linux AMD64 (x86_64)
-\`\`\`bash
-curl -L https://raw.githubusercontent.com/${{ github.repository }}/release/mdok-linux-amd64 -o mdok
-chmod +x mdok
-sudo mv mdok /usr/local/bin/
-\`\`\`
+        ### Linux AMD64 (x86_64)
+        \`\`\`bash
+        curl -L https://raw.githubusercontent.com/${{ github.repository }}/release/mdok-linux-amd64 -o mdok
+        chmod +x mdok
+        sudo mv mdok /usr/local/bin/
+        \`\`\`
 
-### Linux ARM64 (aarch64)
-\`\`\`bash
-curl -L https://raw.githubusercontent.com/${{ github.repository }}/release/mdok-linux-arm64 -o mdok
-chmod +x mdok
-sudo mv mdok /usr/local/bin/
-\`\`\`
+        ### Linux ARM64 (aarch64)
+        \`\`\`bash
+        curl -L https://raw.githubusercontent.com/${{ github.repository }}/release/mdok-linux-arm64 -o mdok
+        chmod +x mdok
+        sudo mv mdok /usr/local/bin/
+        \`\`\`
 
-## Files
+        ## Files
 
-- \`mdok-linux-amd64\` - Linux x86_64 binary
-- \`mdok-linux-arm64\` - Linux ARM64 binary
-- \`VERSION.txt\` - Build information
+        - \`mdok-linux-amd64\` - Linux x86_64 binary
+        - \`mdok-linux-arm64\` - Linux ARM64 binary
+        - \`VERSION.txt\` - Build information
 
-## Build Info
+        ## Build Info
+        EOF
+        
+        # Cleanup indentation in the generated README so it doesn't render as code blocks
+        sed -i 's/^        //' README.md
 
-EOF
         cat VERSION.txt >> README.md
 
         # Commit and push
