--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -20,6 +20,10 @@ jobs:
       with:
         go-version: '1.21'
 
+    # New step to resolve and download dependencies
+    - name: Download dependencies
+      run: go mod tidy
+
     - name: Build for Linux AMD64
       run: |
         GOOS=linux GOARCH=amd64 go build -o mdok-linux-amd64 .
@@ -64,7 +68,6 @@ jobs:
         cp ../VERSION.txt .
 
         # Create README for release branch
-        # All lines below are indented to maintain valid YAML syntax
         cat > README.md << EOF
         # mdok Binaries
 
